tests/frontend_syntax/invalid/unexpected_top_level.vit
space vitte/compiler/demo

let x = 1
